# Visionify

./: .gitignore  constants.py  main.py  package.json  pyproject.toml
visionify-frontend/: package.json
visionify-frontend/src/: index.css
visionify-frontend/src/components/: ImageUploadComponent.jsx  NavBarComponent.jsx
visionify-frontend/src/pages/: LandingPage.jsx
visionify-frontend/src/styles/: capabilitystyles.css
